--- a/config/Makefile
+++ b/config/Makefile
@@ -1,6 +1,15 @@
+HOST_IP := $(shell curl http://169.254.169.254/latest/meta-data/local-ipv4)
+
 .PHONY: start-gitlab
 start-gitlab:
-	@docker-compose up -d
+	@sed -i -e 's#'"'"'http://<host_ip>'"'"'#'"'"'http://$(HOST_IP)'"'"'#g' docker-compose.yml; \
+        docker-compose up -d; \
+        echo ===============================================================;\
+        echo Browse to http://$(HOST_IP); \
+        echo ;\
+        echo Note: Gitlab may take a few minutes to spin up. ;\
+        echo Keep reloading intermittently until the website is displayed. ;\
+        echo ===============================================================
 
 .PHONY: register-gitlab-runner
 register-gitlab-runner:
