--- a/config/Makefile
+++ b/config/Makefile
@@ -1,11 +1,12 @@
-HOST_IP := $(shell curl http://169.254.169.254/latest/meta-data/local-ipv4)
+PRIVATE-IP := $(shell curl http://169.254.169.254/latest/meta-data/local-ipv4)
+PUBLIC-IP := $(shell curl http://169.254.169.254/latest/meta-data/public-ipv4)
 
 .PHONY: start-gitlab
 start-gitlab:
-	@sed -i -e 's#'"'"'http://<host_ip>'"'"'#'"'"'http://$(HOST_IP)'"'"'#g' docker-compose.yml; \
+	@sed -i -e 's#'"'"'http://<private_ip>'"'"'#'"'"'http://$(PRIVATE-IP)'"'"'#g' docker-compose.yml; \
         docker-compose up -d; \
         echo ===============================================================;\
-        echo Browse to http://$(HOST_IP); \
+        echo Browse to http://$(PUBLIC-IP); \
         echo ;\
         echo Note: Gitlab may take a few minutes to spin up. ;\
         echo Keep reloading intermittently until the website is displayed. ;\
