--- a/config/Makefile
+++ b/config/Makefile
@@ -1,13 +1,19 @@
-PRIVATE_IP := $(shell curl http://169.254.169.254/latest/meta-data/local-ipv4)
 PUBLIC_HOSTNAME := $(shell curl http://169.254.169.254/latest/meta-data/public-hostname)
 REGISTRY_USER?=testuser
 REGISTRY_PASSWORD?=testpassword
+REGISTRY_NAME?=registry
+REGISTRY_PORT?=5000
 CURRENT_DIR := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 
 .PHONY: start-gitlab
 start-gitlab:
-	@sed -i -e 's#'"'"'http://<private_ip>'"'"'#'"'"'http://$(PRIVATE_IP)'"'"'#g' docker-compose.yml
-	@docker-compose up -d
+	@sudo sh -c "echo '127.0.0.1   $(PUBLIC_HOSTNAME)' >> /etc/hosts"
+	@mkdir -p certs && mkdir -p auth
+	@openssl req \
+	-newkey rsa:4096 -nodes -sha256 -keyout certs/$(PUBLIC_HOSTNAME).key \
+	-subj "/CN=$(PUBLIC_HOSTNAME)" \
+	-x509 -days 365 -out certs/$(PUBLIC_HOSTNAME).crt
+	@PUBLIC_HOSTNAME=$(PUBLIC_HOSTNAME) docker-compose up -d
 	@make start-registry
 	@echo ==========================================================================
 	@echo Gitlab login:
@@ -22,28 +28,22 @@ start-gitlab:
 
 .PHONY: start-registry
 start-registry:
-	@mkdir certs && mkdir auth
 	@docker run --rm \
 	--entrypoint htpasswd \
 	registry:2 -Bbn $(REGISTRY_USER) $(REGISTRY_PASSWORD) > auth/htpasswd
-	@openssl req \
-	-newkey rsa:4096 -nodes -sha256 -keyout certs/domain.key \
-	-subj "/CN=$(PUBLIC_HOSTNAME)" \
-	-x509 -days 365 -out certs/domain.crt
-	@sudo sh -c "echo '127.0.0.1   $(PUBLIC_HOSTNAME)' >> /etc/hosts"
-	@sudo mkdir -p /etc/docker/certs.d/$(PUBLIC_HOSTNAME):5000
-	@sudo cp certs/domain.crt /etc/docker/certs.d/$(PUBLIC_HOSTNAME)\:5000/ca.crt
+	@sudo mkdir -p /etc/docker/certs.d/$(PUBLIC_HOSTNAME):$(REGISTRY_PORT)
+	@sudo cp certs/$(PUBLIC_HOSTNAME).crt /etc/docker/certs.d/$(PUBLIC_HOSTNAME)\:$(REGISTRY_PORT)/ca.crt
 	@docker run -d \
-	-p 5000:5000 \
+	-p $(REGISTRY_PORT):5000 \
 	--restart=always \
-	--name registry \
+	--name $(REGISTRY_NAME) \
 	-v $(CURRENT_DIR)/auth:/auth \
 	-e "REGISTRY_AUTH=htpasswd" \
 	-e "REGISTRY_AUTH_HTPASSWD_REALM=Registry Realm" \
 	-e REGISTRY_AUTH_HTPASSWD_PATH=/auth/htpasswd \
 	-v $(CURRENT_DIR)/certs:/certs \
-	-e REGISTRY_HTTP_TLS_CERTIFICATE=/certs/domain.crt \
-	-e REGISTRY_HTTP_TLS_KEY=/certs/domain.key \
+	-e REGISTRY_HTTP_TLS_CERTIFICATE=/certs/$(PUBLIC_HOSTNAME).crt \
+	-e REGISTRY_HTTP_TLS_KEY=/certs/$(PUBLIC_HOSTNAME).key \
 	registry:2
 
 .PHONY: register-gitlab-runner
@@ -58,5 +58,5 @@ register-gitlab-runner:
 	--docker-image "docker:stable" \
 	--docker-privileged \
 	--locked=false \
-	--docker-volumes /etc/docker/certs.d/:/etc/docker/certs.d/ \
+	--docker-volumes /etc/docker/certs.d:/etc/docker/certs.d \
 	> /dev/null;
