--- a/CloudFormation/cfn.yml
+++ b/CloudFormation/cfn.yml
@@ -51,6 +51,10 @@ Resources:
         ToPort: 22
         CidrIp: !Ref AdminIp
       - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: !Ref AdminIp
+      - IpProtocol: tcp
         FromPort: 5000
         ToPort: 5001
         CidrIp: 0.0.0.0/0
