--- a/CloudFormation/cfn.yml
+++ b/CloudFormation/cfn.yml
@@ -26,17 +26,12 @@ Resources:
         - !Ref Ec2InstanceSecurityGroup
       UserData:
         Fn::Base64: !Sub |
-          #!/usr/bin/env bash
-          wget https://raw.githubusercontent.com/OzNetNerd/Packer-Gitlab/master/Packer/config/docker-setup.sh
-          sed -e s/"sudo "//g -i docker-setup.sh
-          chmod +x docker-setup.sh
-          ./docker-setup.sh
-          rm docker-setup.sh
-          wget https://raw.githubusercontent.com/OzNetNerd/Packer-Gitlab/master/Packer/config/gitlab-setup.sh
-          sed -e s/"sudo "//g -i gitlab-setup.sh
-          chmod +x gitlab-setup.sh
-          ./gitlab-setup.sh
-          rm gitlab-setup.sh
+          #!/bin/bash
+          mkdir -p /home/ec2-user
+          cd /home/ec2-user
+          wget https://raw.githubusercontent.com/OzNetNerd/Packer-Gitlab/master/CloudFormation/run.sh
+          chmod +x run.sh
+          chown -R ec2-user:ec2-user /home/ec2-user
       Tags:
         - Key: Name
           Value: GitLab
